--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -13,14 +13,15 @@ body {
 
 
 /* Layout */
-.container {
+.container, .container-large  {
   width: 80%;
-  max-width: 800px;
-  margin: auto;
+  margin: 0 auto 3rem auto;
   background-color: aliceblue;
   padding: 3rem;
   border-radius: 20px;
 }
+
+.container { max-width: 800px }
 
 h1 {
   text-align: center;
@@ -29,7 +30,7 @@ h1 {
 
 /* Main Nav */
 #main-nav {
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 
 #main-nav ul {
@@ -68,4 +69,55 @@ h1 {
   list-style: '🎬 ';
   line-height: 1.75;
   padding-left: 2rem;
+}
+
+/* Minichat */
+
+#minichat {
+  display: flex;
+}
+
+#minichat form {
+  width: 40%;
+  border-right: 3px solid #333;
+  padding-right: 1rem;
+}
+
+#minichat .form-group {
+  padding: 5px;
+  margin: 5px 0;
+  width: 100%;
+}
+
+#minichat .form-group > * {
+  margin: 5px 0;
+}
+
+#minichat .form-group input {
+  width: 100%;
+}
+
+#minichat .form-group textarea {
+  width: 100%;
+}
+
+#minichat .form-group input[type="submit"] {
+  width: 80%;
+}
+
+#minichat .form-group a {
+  text-decoration: none;
+  width: 20%;
+}
+
+#minichat > div {
+  padding-left: 1rem;
+}
+
+#minichat>div p {
+  line-height: 1.5rem;
+}
+
+#minichat > div .date {
+  font-size: 0.85rem;
 }
